# MLinMS_st24

./: .gitignore  README.md  pyproject.toml
.github/workflows/: colab-badge-updates.yml
10_exercise/: bo_with_ax.ipynb  deploy_transformer_streamlit.py  rag_for_wiki.ipynb
1_exercise/: deploy_codellama_13B_tutorial.ipynb  evaluate_python_skills.ipynb  prompt_LLMs.ipynb
2_exercise/: first_ml_pipeline.ipynb  python_abcs.ipynb  python_xyzs.ipynb
3_exercise/: Balance_data_and_save.ipynb  intro_data.ipynb  outlier_detection.ipynb  wikipedia_api.ipynb
4_exercise/: fingerprints.ipynb  synthesize-your-own-data.ipynb  synthesize_your_own_data.ipynb
5_exercise/: AT_HOME_multi_dim_arrays.ipynb  step-by-step-linear-regression.ipynb
6_exercise/: AT_HOME.ipynb
7_exercise/: autoML.ipynb  my_first_nn.ipynb
8_hackathon/: template_ml_regression.ipynb
8_hackathon_I/: template_ml_computer_vision.ipynb
9_hackathon_II/: deploy_images.py  deploy_values.py  nn_images.ipynb  nn_regression.ipynb
