[project]
name = "st24_MLinMS"
version = "0.1.0"
description = "Machine Learning in Materials Science Excercise"
authors = [
    {name = "Christopher Kuenneth", email = "christopher.kuenneth@uni-bayreuth.de"},
]
dependencies = [
    "ipykernel>=6.29.4",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "wikipedia-api>=0.6.0",
    "wordcloud>=1.9.3",
    "scikit-learn>=1.4.2",
    "torch>=2.3.0",
    "psmiles[polyBERT] @ git+https://github.com/Ramprasad-Group/psmiles.git",
    "sdv>=1.12.1",
    "jax>=0.4.28",
    "tensorflow>=2.15.1",
    "pydot>=2.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
